# CRM-system

./: .dockerignore   .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
CRM_system/: asgi.py  settings.py  urls.py  validators.py  views.py  wsgi.py
ads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_adcampaign_budget_alter_adcampaign_created_at_and_more.py  0003_alter_adcampaign_channel.py
analytics/: tests.py  urls.py  views.py
contracts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
contracts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_contract_amount_alter_contract_name_and_more.py
customers/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_initial.py  0003_alter_customer_created_at_alter_customer_is_active_and_more.py
leads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
leads/migrations/: 0001_initial.py  0002_alter_lead_created_at_alter_lead_email_and_more.py  0003_alter_lead_email_alter_lead_first_name_and_more.py
media/contracts/: сделаю_ремонт_машины.txt  убраться_чисто_обещаем_8ScsGrb.txt
products/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_name_and_more.py
registration/: tests.py  urls.py  views.py
templates/: _base.html
users/: tests.py  views.py
